# logmux

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml  gitops.yml
aggregator/: go.mod
aggregator/cmd/logmux-aggregator/: main.go
aggregator/internal/pool/: worker.go
aggregator/internal/protocol/: codec.go  codec_test.go
aggregator/internal/ratelimit/: limiter.go  limiter_test.go
aggregator/internal/server/: tcp.go
daemon/rust/: Cargo.toml
daemon/rust/src/: main.rs
daemon/rust/src/collector/: mod.rs  sys.rs  tailer.rs
daemon/rust/src/parser/: cri.rs  json.rs  mod.rs
daemon/rust/src/transport/: codec.rs  mod.rs  tcp.rs
infra/kubernetes/: daemonset.yaml  deployment.yaml  networkpolicy.yaml
infra/terraform/: README.md
protocol/: protocol.md
